[KOGITO-2741] Use Java 8 syntax in tracing decision addon